# ML-Training

./: MENTORSHIP_STATUS.md  README.md
ml-churn-project/: README.md  predict.py  pyproject.toml  threshold.py  train.py
ml-churn-project/configs/: base.yaml
ml-churn-project/data/processed/: test.csv  train.csv  val.csv  y_proba.npy
ml-churn-project/data/raw/: data_insight.ipynb
ml-churn-project/data/raw/.ipynb_checkpoints/: data_insight-checkpoint.ipynb
ml-churn-project/pipelines/: lightgbm_42.joblib  logistic_regression_42.joblib
ml-churn-project/src/: config.py  logger.py  utils.py
ml-churn-project/src/data/: loader.py
ml-churn-project/src/evaluation/: cross_validation.py
ml-churn-project/src/features/: build_features.py
ml-churn-project/src/models/: lightgbm_model.py  pipeline.py
